<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>one.chartsy</groupId>
    <artifactId>chartsy-repository</artifactId>
    <version>0.1-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>chartsy-repository</name>

    <repositories>
        <repository>
            <id>netbeans</id>
            <name>NetBeans</name>
            <url>https://repo.maven.apache.org/maven2/</url>
        </repository>
    </repositories>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.netbeans.utilities</groupId>
                    <artifactId>nbm-maven-plugin</artifactId>
                    <version>4.6</version>
                    <extensions>true</extensions>
                    <configuration>
                        <brandingToken>${brandingToken}</brandingToken>
                        <cluster>${brandingToken}</cluster>
                    </configuration>
                    <dependencies>
                        <!-- Temporary (or not) workaround for maven-dependency-analyser not supporting Java 17 yet -->
                        <dependency>
                            <groupId>org.ow2.asm</groupId>
                            <artifactId>asm</artifactId>
                            <version>9.2</version>
                        </dependency>
                    </dependencies>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.8.1</version>
                    <configuration>
                        <source>17</source>
                        <target>17</target>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>3.2.0</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <modules>
        <module>branding</module>
        <module>application</module>
        <module>chartsy-chart-chartfx</module>
        <module>chartsy-chart-java2d</module>
        <module>chartsy-commons</module>
        <module>chartsy-core</module>
        <module>chartsy-core-ml</module>
        <module>chartsy-samples</module>
        <module>chartsy-simulation</module>
        <module>chartsy-trade</module>
    </modules>

    <dependencies>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>${junit5.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit5.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
            <version>${junit5.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <properties>
        <brandingToken>chartsy</brandingToken>
        <commons.lang.version>3.12.0</commons.lang.version>
        <commons.math.version>3.6.1</commons.math.version>
        <gson.version>2.8.8</gson.version>
        <immutables.version>2.9.0-rc1</immutables.version>
        <junit5.version>5.8.1</junit5.version>
        <log4j.version>2.14.1</log4j.version><!-- Synchronize with 'spring-boot-starter-log4j2'-injected version -->
        <lombok.version>1.18.20</lombok.version>
        <mockito.version>4.0.0</mockito.version>
        <netbeans.version>RELEASE125</netbeans.version>
        <spring.boot.version>2.5.5</spring.boot.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
</project>
